--- a/XbbBusLib/build.gradle
+++ b/XbbBusLib/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.piaoguodeyu'
 android {
     compileSdkVersion 26
+    buildToolsVersion "27.0.3"
 
 
 
     defaultConfig {
-        minSdkVersion 25
+        minSdkVersion 11
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -27,9 +28,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+//    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
+//        exclude group: 'com.android.support', module: 'support-annotations'
+//    })
 }
