--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    testImplementation 'junit:junit:4.12'
-    implementation 'com.github.piaoguodeyu:XbbBus:1.0.0'
+    implementation 'com.github.piaoguodeyu:XbbBus:-SNAPSHOT'
 //    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    })
