修复发送失败问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':XbbBusLib')
 //    testImplementation 'junit:junit:4.12'
-//    implementation 'com.github.piaoguodeyu:XbbBus:-SNAPSHOT'
+//    implementation 'com.github.piaoguodeyu:JdsBus:-SNAPSHOT'
 //    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
 //        exclude group: 'com.android.support', module: 'support-annotations'
 //    })
