--- a/JdsBusLib/build.gradle
+++ b/JdsBusLib/build.gradle
@@ -27,6 +27,7 @@ android {
 }
 
 dependencies {
+    implementation  "com.android.support:appcompat-v7:26.1.0"
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.2'
