--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':JdsBusLib')
+    implementation  "com.android.support:appcompat-v7:26.1.0"
 //    testImplementation 'junit:junit:4.12'
 //    implementation 'com.github.piaoguodeyu:JdsBus:-SNAPSHOT'
 //    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
